force-app/main/default/objects/Expense_Report__c/Expense_Report__c.object-meta.xml
<CustomObject>
    <description>Summary report grouping individual travel expense items for a specific trip.</description>
    <label>Expense Report</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Expense Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>