force-app/main/default/objects/Expense_Report__c/fields/Has_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Has_Exceptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether any policy or duplicate exceptions exist.</description>
    <label>Has Exceptions</label>
    <type>Checkbox</type>
</CustomField>