force-app/main/default/objects/Expense_Report__c/fields/Reimbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Status__c</fullName>
    <description>Reimbursement execution status.</description>
    <label>Reimbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Applicable</fullName><default>true</default><label>Not Applicable</label></value>
            <value><fullName>Pending Reimbursement</fullName><default>false</default><label>Pending Reimbursement</label></value>
            <value><fullName>Processing</fullName><default>false</default><label>Processing</label></value>
            <value><fullName>Reimbursed</fullName><default>false</default><label>Reimbursed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>