force-app/main/default/objects/Expense_Report__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date of expense report creation.</description>
    <label>Report Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>