force-app/main/default/objects/Expense_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Overall expense report lifecycle status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Reimbursement Processing</fullName><default>false</default><label>Reimbursement Processing</label></value>
            <value><fullName>Reimbursed</fullName><default>false</default><label>Reimbursed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>