force-app/main/default/objects/Expense_Report__c/fields/Total_Reimbursable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Reimbursable_Amount__c</fullName>
    <description>Roll-up sum of reimbursable amounts from expense items.</description>
    <label>Total Reimbursable Amount</label>
    <summarizedField>Expense_Item__c.Reimbursable_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>