force-app/main/default/objects/Expense_Report__c/fields/Travel_Request__c.field-meta.xml
<CustomField>
    <fullName>Travel_Request__c</fullName>
    <description>Parent travel request associated with this expense report.</description>
    <label>Travel Request</label>
    <referenceTo>Travel_Request__c</referenceTo>
    <relationshipLabel>Expense Reports</relationshipLabel>
    <relationshipName>Expense_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>