force-app/main/default/objects/Expense_Report__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <description>Smart Expense Control validation outcome.</description>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending Validation</fullName><default>true</default><label>Pending Validation</label></value>
            <value><fullName>Passed</fullName><default>false</default><label>Passed</label></value>
            <value><fullName>Policy Exceptions Detected</fullName><default>false</default><label>Policy Exceptions Detected</label></value>
            <value><fullName>Verification Required</fullName><default>false</default><label>Verification Required</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>